# taskservice

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration-example.yaml  run-migration.sh
migrations/: 20250803214852_user_table.sql  20250803215704_task_table.sql  20250816234606_add_status_to_profiles.sql  20250817020944_make_status_not_null_in_subscriptions.sql  20250817021247_create_profile_tokens_table.sql  20250821202912_remove_fk_constraint_task_table.sql  20250824191737_add_username_password_to_profile.sql  20250831134839_create_status_type.sql  20250831135245_create_idempotency_table.sql  20250901135211_create_issue_delivery_queue_table.sql  20250902213738_add_retry_cols_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/api/: docs.rs  index.rs  mod.rs  profile.rs  task.rs  user.rs
src/domain/: email.rs  id.rs  mod.rs  name.rs  password.rs  profile_email.rs  profile_name.rs  username.rs
src/error/: authentication.rs  mod.rs  profile.rs  store_token.rs  task.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/model/: mod.rs  profile.rs  task.rs  task_issue.rs
src/repository/: mod.rs  pgdb.rs
src/routes/: docs.rs  health_check.rs  login.rs  mod.rs  profile.rs  profile_confirm.rs  task.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: mod.rs  password_change.rs
src/util/: mod.rs  opaque_error.rs  token_generator.rs
tests/: health_check.rs  profile_checks.rs
tests/api/: admin_dashboard.rs  change_password.rs  common.rs  health_check.rs  login.rs  main.rs  profile_checks.rs  profile_confirm_checks.rs  refresh_token.rs  task_checks.rs  test_profile.rs
tests/common/: mod.rs
