[package]
name = "taskservice"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "taskservice"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
derive_more = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
envconfig = "0.11.0"

[dev-dependencies]
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json"] }
