[package]
name = "taskservice"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "taskservice"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
derive_more = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
envconfig = "0.11.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
base64 = "0.22.1"
sha3 = "0.10.8"
argon2 = { version = "0.5.3", features = ["std"] }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
serde_json = "1.0.142"

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
claims = "0.8.0"
fake = "4.4.0"
linkify = "0.10.0"
once_cell = "1.21.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.6.5"


[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   #  Link Time Optimization
